[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/circle.png" type="Texture" id=1]
[ext_resource path="res://sprites/button.png" type="Texture" id=2]
[ext_resource path="res://sprites/button_pressed.png" type="Texture" id=3]
[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://scripts/field.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 8, 8 )
margin_left = 3.0
margin_right = 4.0
margin_top = 3.0
margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 8, 8 )
margin_left = 4.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 4.0

[node name="field" type="Node2D"]
script = ExtResource( 5 )

[node name="meter" type="Node2D" parent="."]
position = Vector2( 128, 64 )

[node name="meter" type="NinePatchRect" parent="meter"]
self_modulate = Color( 0.5, 0.5, 0.5, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 32.0
texture = ExtResource( 2 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 4
patch_margin_bottom = 4

[node name="circle" type="Sprite" parent="meter"]
self_modulate = Color( 0.5, 1, 0.5, 1 )
position = Vector2( 0, 28 )
texture = ExtResource( 1 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="minus" type="Button" parent="canvas"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -93.0
margin_top = -48.0
margin_right = -69.0
margin_bottom = -24.0
custom_colors/font_color_disabled = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_focus = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "-"

[node name="plus" type="Button" parent="canvas"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 68.0
margin_top = -48.0
margin_right = 92.0
margin_bottom = -24.0
custom_colors/font_color_disabled = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_focus = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_hover = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_colors/font_color_pressed = Color( 0.301961, 0.301961, 0.301961, 1 )
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "+"

[node name="password" type="Label" parent="canvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -20.0
margin_right = 48.0
margin_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "аывадлоыджсо"

[node name="timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[connection signal="pressed" from="canvas/minus" to="." method="_on_minus_pressed"]
[connection signal="pressed" from="canvas/plus" to="." method="_on_plus_pressed"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
